parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     type_spec -> TYPE
Rule 5     type_spec -> TYPE ARROW TYPE
Rule 6     type_spec -> TANGENT ID TYPE
Rule 7     type_spec -> TYPE LBRACKET dimension_list RBRACKET
Rule 8     dimension_list -> dimension_spec
Rule 9     dimension_list -> dimension_spec COMMA dimension_list
Rule 10    dimension_spec -> PLUS NUMBER
Rule 11    dimension_spec -> MINUS NUMBER
Rule 12    dimension_spec -> NUMBER
Rule 13    dimension_spec -> ID
Rule 14    dimension_spec -> TYPE
Rule 15    statement -> DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT
Rule 16    statement -> DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT
Rule 17    func_body_stmts -> func_body_stmt
Rule 18    func_body_stmts -> func_body_stmts func_body_stmt
Rule 19    func_body_stmt -> ID EQUALS func_expr NEWLINE
Rule 20    func_body_stmt -> ID COLON type_spec EQUALS func_expr NEWLINE
Rule 21    func_body_stmt -> ID COMMA ID EQUALS func_expr NEWLINE
Rule 22    func_body_stmt -> ID COMMA ID COMMA ID EQUALS func_expr NEWLINE
Rule 23    func_body_stmt -> NEWLINE
Rule 24    statement -> DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT func_init FOR ID COLON NEWLINE INDENT func_loop_body DEDENT NEWLINE RETURN func_expr DEDENT
Rule 25    func_init -> <empty>
Rule 26    func_init -> func_init func_init_stmt
Rule 27    func_init_stmt -> ID EQUALS func_expr NEWLINE
Rule 28    func_init_stmt -> NEWLINE
Rule 29    func_loop_body -> <empty>
Rule 30    func_loop_body -> func_loop_body func_loop_stmt
Rule 31    func_loop_stmt -> ID EQUALS func_expr NEWLINE
Rule 32    func_loop_stmt -> ID PLUSEQ func_expr NEWLINE
Rule 33    func_loop_stmt -> NEWLINE
Rule 34    statement -> CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
Rule 35    statement -> CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
Rule 36    statement -> CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
Rule 37    statement -> CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
Rule 38    statement -> CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
Rule 39    statement -> CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
Rule 40    statement -> CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT FOR ID COLON NEWLINE INDENT lambda_loop_body DEDENT RETURN func_expr NEWLINE DEDENT DEDENT
Rule 41    statement -> CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT FOR ID COLON NEWLINE INDENT lambda_loop_body DEDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
Rule 42    lambda_loop_body -> <empty>
Rule 43    lambda_loop_body -> lambda_loop_body lambda_loop_stmt
Rule 44    lambda_loop_stmt -> ID EQUALS func_expr NEWLINE
Rule 45    lambda_loop_stmt -> NEWLINE
Rule 46    statement -> ID COLON type_spec EQUALS expr
Rule 47    statement -> ID EQUALS expr
Rule 48    statement -> expr
Rule 49    statement -> NEWLINE
Rule 50    statement -> FOR ID COLON NEWLINE INDENT for_body DEDENT
Rule 51    for_body -> <empty>
Rule 52    for_body -> for_body for_statement
Rule 53    for_statement -> ID EQUALS func_expr NEWLINE
Rule 54    for_statement -> ID PLUSEQ func_expr NEWLINE
Rule 55    for_statement -> ID LPAREN func_args RPAREN NEWLINE
Rule 56    for_statement -> NEWLINE
Rule 57    params -> <empty>
Rule 58    params -> ID COLON type_spec
Rule 59    params -> ID COLON type_spec COMMA params
Rule 60    func_expr -> func_expr PLUS func_term
Rule 61    func_expr -> func_expr MINUS func_term
Rule 62    func_expr -> func_term
Rule 63    func_term -> func_term TIMES func_factor
Rule 64    func_term -> func_term DIVIDE func_factor
Rule 65    func_term -> func_term MATMUL func_factor
Rule 66    func_term -> func_term POWER func_factor
Rule 67    func_term -> func_factor
Rule 68    func_factor -> NUMBER
Rule 69    func_factor -> ID
Rule 70    func_factor -> LPAREN func_expr RPAREN
Rule 71    func_factor -> ID LPAREN func_args RPAREN
Rule 72    func_factor -> ID LBRACKET func_expr RBRACKET
Rule 73    func_factor -> ID LPAREN func_args RPAREN LBRACKET func_expr RBRACKET
Rule 74    func_factor -> LBRACKET func_elements RBRACKET
Rule 75    func_factor -> STRING
Rule 76    func_factor -> IMAGINARY
Rule 77    func_elements -> func_expr
Rule 78    func_elements -> func_expr COMMA func_elements
Rule 79    func_args -> <empty>
Rule 80    func_args -> func_expr
Rule 81    func_args -> func_expr COMMA func_args
Rule 82    expr -> expr PLUS term
Rule 83    expr -> expr MINUS term
Rule 84    expr -> term
Rule 85    term -> term TIMES factor
Rule 86    term -> term DIVIDE factor
Rule 87    term -> term MATMUL factor
Rule 88    term -> term POWER factor
Rule 89    term -> factor
Rule 90    factor -> ID LPAREN args RPAREN
Rule 91    factor -> NUMBER
Rule 92    factor -> MINUS factor
Rule 93    factor -> ID
Rule 94    factor -> LPAREN expr RPAREN
Rule 95    factor -> LBRACKET elements RBRACKET
Rule 96    factor -> STRING
Rule 97    elements -> expr
Rule 98    elements -> expr COMMA elements
Rule 99    elements -> NEWLINE elements
Rule 100   elements -> elements NEWLINE
Rule 101   factor -> ID LBRACKET NUMBER RBRACKET
Rule 102   factor -> ID LBRACKET NUMBER COLON NUMBER RBRACKET
Rule 103   args -> <empty>
Rule 104   args -> expr
Rule 105   args -> expr COMMA args

Terminals, with rules where they appear

ARROW                : 5 34 35 35 36 37 37 38 38 39 39 40 41 41
CLASS                : 34 35 36 37 38 39 40 41
COLON                : 15 15 16 16 20 24 24 24 34 34 35 35 35 36 36 37 37 37 38 38 38 39 39 39 40 40 40 41 41 41 41 46 50 58 59 102
COMMA                : 9 21 22 22 59 78 81 98 105
DEDENT               : 15 16 24 24 34 34 35 35 35 36 36 37 37 37 38 38 38 39 39 39 40 40 40 41 41 41 41 50
DEF                  : 15 16 24 34 35 35 36 37 37 38 38 39 39 40 41 41
DIVIDE               : 64 86
EQUALS               : 19 20 21 22 27 31 44 46 47 53
FOR                  : 24 40 41 50
ID                   : 6 13 15 16 19 20 21 21 22 22 22 24 24 27 31 32 34 35 35 36 37 37 38 38 39 39 40 40 41 41 41 44 46 47 50 53 54 55 58 59 69 71 72 73 90 93 101 102
IMAGINARY            : 76
INDENT               : 15 16 24 24 34 34 35 35 35 36 36 37 37 37 38 38 38 39 39 39 40 40 40 41 41 41 41 50
LAMBDA               : 34 35 36 37 38 39 40 41
LBRACKET             : 7 72 73 74 95 101 102
LPAREN               : 15 16 24 34 34 35 35 35 36 36 37 37 37 38 38 38 39 39 39 40 40 41 41 41 55 70 71 73 90 94
MATMUL               : 65 87
MINUS                : 11 61 83 92
NEWLINE              : 15 15 16 16 19 20 21 22 23 24 24 24 27 28 31 32 33 34 34 34 35 35 35 35 35 36 36 36 37 37 37 37 37 38 38 38 38 38 39 39 39 39 39 40 40 40 40 41 41 41 41 41 41 44 45 49 50 53 54 55 56 99 100
NUMBER               : 10 11 12 68 91 101 102 102
PLUS                 : 10 60 82
PLUSEQ               : 32 54
POWER                : 66 88
RBRACKET             : 7 72 73 74 95 101 102
RETURN               : 15 16 24 34 35 35 36 37 37 38 38 39 39 40 41 41
RPAREN               : 15 16 24 34 34 35 35 35 36 36 37 37 37 38 38 38 39 39 39 40 40 41 41 41 55 70 71 73 90 94
STRING               : 75 96
TANGENT              : 6
TIMES                : 63 85
TYPE                 : 4 5 5 6 7 14
error                : 

Nonterminals, with rules where they appear

args                 : 90 105
dimension_list       : 7 9
dimension_spec       : 8 9
elements             : 95 98 99 100
expr                 : 46 47 48 82 83 94 97 98 104 105
factor               : 85 86 87 88 89 92
for_body             : 50 52
for_statement        : 52
func_args            : 55 71 73 81
func_body_stmt       : 17 18
func_body_stmts      : 16 18 36 37 38 39 39
func_elements        : 74 78
func_expr            : 15 16 19 20 21 22 24 27 31 32 34 35 35 36 37 37 38 38 39 39 40 41 41 44 53 54 60 61 70 72 73 77 78 80 81
func_factor          : 63 64 65 66 67
func_init            : 24 26
func_init_stmt       : 26
func_loop_body       : 24 30
func_loop_stmt       : 30
func_term            : 60 61 62 63 64 65 66
lambda_loop_body     : 40 41 43
lambda_loop_stmt     : 43
params               : 15 16 24 34 34 35 35 35 36 36 37 37 37 38 38 38 39 39 39 40 40 41 41 41 59
program              : 0
statement            : 2 3
statements           : 1 2
term                 : 82 83 84 85 86 87 88
type_spec            : 15 16 20 24 34 35 35 36 37 37 38 38 39 39 40 41 41 46 58 59

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (15) statement -> . DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT
    (16) statement -> . DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT
    (24) statement -> . DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT func_init FOR ID COLON NEWLINE INDENT func_loop_body DEDENT NEWLINE RETURN func_expr DEDENT
    (34) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (35) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (36) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (37) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (38) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (39) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (40) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT FOR ID COLON NEWLINE INDENT lambda_loop_body DEDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (41) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT FOR ID COLON NEWLINE INDENT lambda_loop_body DEDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (46) statement -> . ID COLON type_spec EQUALS expr
    (47) statement -> . ID EQUALS expr
    (48) statement -> . expr
    (49) statement -> . NEWLINE
    (50) statement -> . FOR ID COLON NEWLINE INDENT for_body DEDENT
    (82) expr -> . expr PLUS term
    (83) expr -> . expr MINUS term
    (84) expr -> . term
    (85) term -> . term TIMES factor
    (86) term -> . term DIVIDE factor
    (87) term -> . term MATMUL factor
    (88) term -> . term POWER factor
    (89) term -> . factor
    (90) factor -> . ID LPAREN args RPAREN
    (91) factor -> . NUMBER
    (92) factor -> . MINUS factor
    (93) factor -> . ID
    (94) factor -> . LPAREN expr RPAREN
    (95) factor -> . LBRACKET elements RBRACKET
    (96) factor -> . STRING
    (101) factor -> . ID LBRACKET NUMBER RBRACKET
    (102) factor -> . ID LBRACKET NUMBER COLON NUMBER RBRACKET

    DEF             shift and go to state 4
    CLASS           shift and go to state 9
    ID              shift and go to state 5
    NEWLINE         shift and go to state 7
    FOR             shift and go to state 8
    NUMBER          shift and go to state 14
    MINUS           shift and go to state 12
    LPAREN          shift and go to state 6
    LBRACKET        shift and go to state 15
    STRING          shift and go to state 16

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expr                           shift and go to state 10
    term                           shift and go to state 11
    factor                         shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (15) statement -> . DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT
    (16) statement -> . DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT
    (24) statement -> . DEF ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT func_init FOR ID COLON NEWLINE INDENT func_loop_body DEDENT NEWLINE RETURN func_expr DEDENT
    (34) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (35) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (36) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (37) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (38) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (39) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (40) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT FOR ID COLON NEWLINE INDENT lambda_loop_body DEDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (41) statement -> . CLASS ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT FOR ID COLON NEWLINE INDENT lambda_loop_body DEDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (46) statement -> . ID COLON type_spec EQUALS expr
    (47) statement -> . ID EQUALS expr
    (48) statement -> . expr
    (49) statement -> . NEWLINE
    (50) statement -> . FOR ID COLON NEWLINE INDENT for_body DEDENT
    (82) expr -> . expr PLUS term
    (83) expr -> . expr MINUS term
    (84) expr -> . term
    (85) term -> . term TIMES factor
    (86) term -> . term DIVIDE factor
    (87) term -> . term MATMUL factor
    (88) term -> . term POWER factor
    (89) term -> . factor
    (90) factor -> . ID LPAREN args RPAREN
    (91) factor -> . NUMBER
    (92) factor -> . MINUS factor
    (93) factor -> . ID
    (94) factor -> . LPAREN expr RPAREN
    (95) factor -> . LBRACKET elements RBRACKET
    (96) factor -> . STRING
    (101) factor -> . ID LBRACKET NUMBER RBRACKET
    (102) factor -> . ID LBRACKET NUMBER COLON NUMBER RBRACKET

    $end            reduce using rule 1 (program -> statements .)
    DEF             shift and go to state 4
    CLASS           shift and go to state 9
    ID              shift and go to state 5
    NEWLINE         shift and go to state 7
    FOR             shift and go to state 8
    NUMBER          shift and go to state 14
    MINUS           shift and go to state 12
    LPAREN          shift and go to state 6
    LBRACKET        shift and go to state 15
    STRING          shift and go to state 16

    statement                      shift and go to state 17
    expr                           shift and go to state 10
    term                           shift and go to state 11
    factor                         shift and go to state 13

state 3

    (3) statements -> statement .

    DEF             reduce using rule 3 (statements -> statement .)
    CLASS           reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    NEWLINE         reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    LBRACKET        reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)


state 4

    (15) statement -> DEF . ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT
    (16) statement -> DEF . ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT
    (24) statement -> DEF . ID LPAREN params RPAREN COLON type_spec COLON NEWLINE INDENT func_init FOR ID COLON NEWLINE INDENT func_loop_body DEDENT NEWLINE RETURN func_expr DEDENT

    ID              shift and go to state 18


state 5

    (46) statement -> ID . COLON type_spec EQUALS expr
    (47) statement -> ID . EQUALS expr
    (90) factor -> ID . LPAREN args RPAREN
    (93) factor -> ID .
    (101) factor -> ID . LBRACKET NUMBER RBRACKET
    (102) factor -> ID . LBRACKET NUMBER COLON NUMBER RBRACKET

  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
    COLON           shift and go to state 19
    EQUALS          shift and go to state 20
    LPAREN          shift and go to state 21
    TIMES           reduce using rule 93 (factor -> ID .)
    DIVIDE          reduce using rule 93 (factor -> ID .)
    MATMUL          reduce using rule 93 (factor -> ID .)
    POWER           reduce using rule 93 (factor -> ID .)
    PLUS            reduce using rule 93 (factor -> ID .)
    MINUS           reduce using rule 93 (factor -> ID .)
    DEF             reduce using rule 93 (factor -> ID .)
    CLASS           reduce using rule 93 (factor -> ID .)
    ID              reduce using rule 93 (factor -> ID .)
    NEWLINE         reduce using rule 93 (factor -> ID .)
    FOR             reduce using rule 93 (factor -> ID .)
    NUMBER          reduce using rule 93 (factor -> ID .)
    STRING          reduce using rule 93 (factor -> ID .)
    $end            reduce using rule 93 (factor -> ID .)
    LBRACKET        shift and go to state 22

  ! LPAREN          [ reduce using rule 93 (factor -> ID .) ]
  ! LBRACKET        [ reduce using rule 93 (factor -> ID .) ]


state 6

    (94) factor -> LPAREN . expr RPAREN
    (82) expr -> . expr PLUS term
    (83) expr -> . expr MINUS term
    (84) expr -> . term
    (85) term -> . term TIMES factor
    (86) term -> . term DIVIDE factor
    (87) term -> . term MATMUL factor
    (88) term -> . term POWER factor
    (89) term -> . factor
    (90) factor -> . ID LPAREN args RPAREN
    (91) factor -> . NUMBER
    (92) factor -> . MINUS factor
    (93) factor -> . ID
    (94) factor -> . LPAREN expr RPAREN
    (95) factor -> . LBRACKET elements RBRACKET
    (96) factor -> . STRING
    (101) factor -> . ID LBRACKET NUMBER RBRACKET
    (102) factor -> . ID LBRACKET NUMBER COLON NUMBER RBRACKET

    ID              shift and go to state 24
    NUMBER          shift and go to state 14
    MINUS           shift and go to state 12
    LPAREN          shift and go to state 6
    LBRACKET        shift and go to state 15
    STRING          shift and go to state 16

    expr                           shift and go to state 23
    term                           shift and go to state 11
    factor                         shift and go to state 13

state 7

    (49) statement -> NEWLINE .

    DEF             reduce using rule 49 (statement -> NEWLINE .)
    CLASS           reduce using rule 49 (statement -> NEWLINE .)
    ID              reduce using rule 49 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 49 (statement -> NEWLINE .)
    FOR             reduce using rule 49 (statement -> NEWLINE .)
    NUMBER          reduce using rule 49 (statement -> NEWLINE .)
    MINUS           reduce using rule 49 (statement -> NEWLINE .)
    LPAREN          reduce using rule 49 (statement -> NEWLINE .)
    LBRACKET        reduce using rule 49 (statement -> NEWLINE .)
    STRING          reduce using rule 49 (statement -> NEWLINE .)
    $end            reduce using rule 49 (statement -> NEWLINE .)


state 8

    (50) statement -> FOR . ID COLON NEWLINE INDENT for_body DEDENT

    ID              shift and go to state 25


state 9

    (34) statement -> CLASS . ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (35) statement -> CLASS . ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (36) statement -> CLASS . ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (37) statement -> CLASS . ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (38) statement -> CLASS . ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (39) statement -> CLASS . ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT func_body_stmts RETURN func_expr NEWLINE DEDENT DEDENT
    (40) statement -> CLASS . ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT FOR ID COLON NEWLINE INDENT lambda_loop_body DEDENT RETURN func_expr NEWLINE DEDENT DEDENT
    (41) statement -> CLASS . ID LPAREN params RPAREN COLON NEWLINE INDENT DEF LAMBDA LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT FOR ID COLON NEWLINE INDENT lambda_loop_body DEDENT RETURN func_expr NEWLINE DEDENT DEF ID LPAREN params RPAREN ARROW type_spec COLON NEWLINE INDENT RETURN func_expr NEWLINE DEDENT DEDENT

    ID              shift and go to state 26


state 10

    (48) statement -> expr .
    (82) expr -> expr . PLUS term
    (83) expr -> expr . MINUS term

  ! shift/reduce conflict for MINUS resolved as shift
    DEF             reduce using rule 48 (statement -> expr .)
    CLASS           reduce using rule 48 (statement -> expr .)
    ID              reduce using rule 48 (statement -> expr .)
    NEWLINE         reduce using rule 48 (statement -> expr .)
    FOR             reduce using rule 48 (statement -> expr .)
    NUMBER          reduce using rule 48 (statement -> expr .)
    LPAREN          reduce using rule 48 (statement -> expr .)
    LBRACKET        reduce using rule 48 (statement -> expr .)
    STRING          reduce using rule 48 (statement -> expr .)
    $end            reduce using rule 48 (statement -> expr .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28

  ! MINUS           [ reduce using rule 48 (statement -> expr .) ]


state 11

    (84) expr -> term .
    (85) term -> term . TIMES factor
    (86) term -> term . DIVIDE factor
    (87) term -> term . MATMUL factor
    (88) term -> term . POWER factor

    PLUS            reduce using rule 84 (expr -> term .)
    MINUS           reduce using rule 84 (expr -> term .)
    DEF             reduce using rule 84 (expr -> term .)
    CLASS           reduce using rule 84 (expr -> term .)
    ID              reduce using rule 84 (expr -> term .)
    NEWLINE         reduce using rule 84 (expr -> term .)
    FOR             reduce using rule 84 (expr -> term .)
    NUMBER          reduce using rule 84 (expr -> term .)
    LPAREN          reduce using rule 84 (expr -> term .)
    LBRACKET        reduce using rule 84 (expr -> term .)
    STRING          reduce using rule 84 (expr -> term .)
    $end            reduce using rule 84 (expr -> term .)
    RPAREN          reduce using rule 84 (expr -> term .)
    COMMA           reduce using rule 84 (expr -> term .)
    RBRACKET        reduce using rule 84 (expr -> term .)
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    MATMUL          shift and go to state 31
    POWER           shift and go to state 32


state 12

    (92) factor -> MINUS . factor
    (90) factor -> . ID LPAREN args RPAREN
    (91) factor -> . NUMBER
    (92) factor -> . MINUS factor
    (93) factor -> . ID
    (94) factor -> . LPAREN expr RPAREN
    (95) factor -> . LBRACKET elements RBRACKET
    (96) factor -> . STRING
    (101) factor -> . ID LBRACKET NUMBER RBRACKET
    (102) factor -> . ID LBRACKET NUMBER COLON NUMBER RBRACKET

    ID              shift and go to state 24
    NUMBER          shift and go to state 14
    MINUS           shift and go to state 12
    LPAREN          shift and go to state 6
    LBRACKET        shift and go to state 15
    STRING          shift and go to state 16

    factor                         shift and go to state 33

state 13

    (89) term -> factor .

    TIMES           reduce using rule 89 (term -> factor .)
    DIVIDE          reduce using rule 89 (term -> factor .)
    MATMUL          reduce using rule 89 (term -> factor .)
    POWER           reduce using rule 89 (term -> factor .)
    PLUS            reduce using rule 89 (term -> factor .)
    MINUS           reduce using rule 89 (term -> factor .)
    DEF             reduce using rule 89 (term -> factor .)
    CLASS           reduce using rule 89 (term -> factor .)
    ID              reduce using rule 89 (term -> factor .)
    NEWLINE         reduce using rule 89 (term -> factor .)
    FOR             reduce using rule 89 (term -> factor .)
    NUMBER          reduce using rule 89 (term -> factor .)
    LPAREN          reduce using rule 89 (term -> factor .)
    LBRACKET        reduce using rule 89 (term -> factor .)
    STRING          reduce using rule 89 (term -> factor .)
    $end            reduce using rule 89 (term -> factor .)
    RPAREN          reduce using rule 89 (term -> factor .)
    COMMA           reduce using rule 89 (term -> factor .)
    RBRACKET        reduce using rule 89 (term -> factor .)


state 14

    (91) factor -> NUMBER .
